# python_aula07

./: README.md  dados.csv  etl.py  pyproject.toml
