[tool.poetry]
name = "aula"
version = "0.1.0"
description = ""
authors = ["Guh Nasc <gpaulino31@hotmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pandera = "^0.22.1"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
